# sreality-scraper-app

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: controller.py  views.py
app/services/: html_generator.py
database/: apply_migrations.py  config.py  factory.py  sql_schema.py
database/migrations/: alembic.ini  env.py
database/migrations/versions/: 7aa62226dcd8_initial_migration.py
database/services/: base.py  flat.py  pagination.py
docker/: Dockerfile  entrypoint.sh  init_db.sh
http_server/: config.py  handler.py  main.py  router.py  server.py
scraper/: constants.py  error_handler.py  items.py  middlewares.py  pipelines.py  settings.py
scraper/services/: configuration.py  extractor.py  parser.py  schema.py
scraper/spiders/: sreality_spider.py
tests/: conftest.py  utils.py
tests/test_app/: test_html_generator.py  test_view.py
tests/test_http_server/: test_server.py
tests/test_scraper/: test_spider.py
tests/test_scraper/test_services/: test_api_response_parser.py  test_json_data_extractor.py
